--- a/Project/app/src/main/res/values/strings.xml
+++ b/Project/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="name">name</string>
     <string name="phone_number">phone number</string>
     <string name="compulsory">All the details are compulsory</string>
+    <string name="return_home">Return Home</string>
 </resources>
