--- a/Project/app/src/main/res/values/strings.xml
+++ b/Project/app/src/main/res/values/strings.xml
@@ -10,4 +10,10 @@
     <string name="phone_number">phone number</string>
     <string name="compulsory">All the details are compulsory</string>
     <string name="return_home">Return Home</string>
+    <string name="java">JAVA</string>
+    <string name="csharpe">C#</string>
+    <string name="scala">Scala</string>
+    <string name="c">C</string>
+    <string name="python">Python</string>
+    <string name="javascript">Javascript</string>
 </resources>
